# codex-openai-proxy

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: how-it-works.md  system-architecture.md
examples/openai-sdk-smoke/: README.md  node_smoke.mjs  package-lock.json  package.json  python_smoke.py
src/codex_openai_proxy/: cli.py  config.py
src/codex_openai_proxy/api/: app.py
src/codex_openai_proxy/auth/: __init__.py  oauth.py  service.py  store.py  types.py
src/codex_openai_proxy/codex/: __init__.py  client.py  rate_limits.py
tests/: test_integration.py
