[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "codex-openai-proxy"
version = "0.1.0"
description = "Local OpenAI-compatible proxy backed by Codex subscription OAuth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.1",
  "httpx>=0.28.1",
  "typer>=0.24.1",
  "uvicorn[standard]>=0.41.0",
]

[project.scripts]
codex-openai-proxy = "codex_openai_proxy.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[dependency-groups]
dev = [
  "black>=26.3.0",
  "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_openai_proxy"]
